--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,1 +1,11 @@
-<h1>hello</h1>
+<h1>Post</h1>
+
+<ul>
+{% for post in object_list %}
+<li>{{ post.title}} - {{ post.author.first_name}}
+    {{ post.author.last_name}} <br>
+{{post.body}}</li>
+
+
+{% endfor %}
+</ul>
