--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 
 
 <h1>{{ post.title }}</h1>
@@ -7,4 +11,8 @@
 
 
 <br>
-<a href="{% url 'home' %}">Return</a>
+<br>
+<a href="{% url 'home' %}" class="btn btn-outline-primary">Return</a>
+
+{% endblock %}
+
