--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}{{ post.title_blog }}
+{% endblock %}
+
 
 {% block content %}
-
-
-
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author.first_name }} {{ post.author.last_name }} <br>
     <hr>
