added add blog table

--- a/blog/templates/create_post.html
+++ b/blog/templates/create_post.html
@@ -6,8 +6,12 @@
 
 <h1>Create Blog Post</h1>
 
-
-
+<br>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button class="btn btn-outline-primary">POST</button>
+</form>
 
 
 {% endblock %}
